return stock levels
